manifests/longhorn/postinstall/overlays/lab/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-routing-dashboard
  namespace: longhorn-system
spec:
  parentRefs:
  - name: clusteringress-frontdoor
    sectionName: https
    namespace: gatewayapi
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - longhorn.hunt.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
      weight: 1
      kind: Service
